# code-intelligence-skill

./: .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SKILL.md  build_skill.py  distiller.py  pyproject.toml  requirements.txt  safe_edit.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
tests/: test_go.py  test_java.py  test_python.py
