[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-intelligence-skill"
version = "1.0.0"
description = "Universal, safe, and professional code modification and refactoring environment for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gemini CLI Team"}
]
dependencies = [
    "tree-sitter>=0.20.0",
    "rope>=1.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
safe-edit = "safe_edit:main"
distill = "distiller:main"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["safe_edit*", "distiller*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
